# CMake

lab_1cmake/: CMakeLists.txt  Makefile  main.cpp
lab_2cmake/: CMakeLists.txt  main.cpp
lab_2cmake/include/: calc.hpp
lab_3cmake/: CMakeLists.txt  defaultconfig.h.in  main.cpp
lab_3cmake/include/: calc.hpp
lab_3cmake/lib/: CMakeLists.txt  Wifi.cpp
lab_3cmake/src/: calc.cpp
